--- a/templates/page.html
+++ b/templates/page.html
@@ -29,13 +29,32 @@
         </div>
 
         {%- block after_page -%}
-        <hr/>
         {# TODO: Decide if any sort of commenting functionality is desired? #}
         {#%- include "snippets/comments.html"  -%#}
 
+        {% if config.extra.support_us %}
+        <div class="support_us">
+          <div class="pagination__title">
+            <span class="pagination__title-h">{{ config.extra.support_us }}</span>
+            <hr />
+          </div>
+
+          <div class="support_us__content">
+            {%- block support_us_content -%}
+            <p> Loved this post? </p>
+            <p> Buy a coffee for us, we love coffee! </p>
+            {%- endblock support_us_content -%}
+          </div><!-- Support us content -->
+        </div>
+        {% endif %}
+
         {% if config.extra.url_to_clipboard %}
+        <div class="pagination__title">
+          <span class="pagination__title-h">{{ config.extra.url_to_clipboard }}</span>
+          <hr />
+        </div>
+
         <div class="url_to_clipboard">
-          <div> {{ config.extra.url_to_clipboard }} </div>
           {{ utils::url_to_clipboard() }}
         </div>
         {% endif %}
