pagination in pages

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,3 +1,4 @@
+{% import "macros/pagination_page.html" as pagination_page -%}
 {% import "macros/head.html" as head -%}
 {% import "macros/utils.html" as utils -%}
 {% extends "index.html" -%}
@@ -41,8 +42,11 @@
 
           <div class="support_us__content">
             {%- block support_us_content -%}
+            {#- TODO pass to snippet -#}
             <p> Loved this post? </p>
-            <p> Buy a coffee for us, we love coffee! </p>
+            <i class="gg-coffee"></i>
+            <p> Buy a coffee for us! </p>
+            <p> (Extend this block) </p>
             {%- endblock support_us_content -%}
           </div><!-- Support us content -->
         </div>
@@ -58,6 +62,23 @@
           {{ utils::url_to_clipboard() }}
         </div>
         {% endif %}
+
+        {% if config.extra.follow_me %}
+        <div class="pagination__title">
+          <span class="pagination__title-h">{{ config.extra.follow_me }}</span>
+          <hr />
+        </div>
+
+        <div class="follow_me">
+            {%- block follow_me_content -%}
+            Let's keep in touch <a href="/">here</a> and <a href="/">here</a>
+            {%- endblock follow_me_content -%}
+        </div>
+        {% endif %}
         {%- endblock after_page -%}
 </div>
 {%- endblock main -%}
+
+{%- block pagination -%}
+  {{ pagination_page::paginate() }}
+{%- endblock pagination -%}
