--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,7 @@
   position: absolute;
   background: var(--background);
   box-shadow: var(--shadow);
-  color: white;
+  color: var (--color);
   border: 2px solid;
   margin: 0;
   padding: 10px;
@@ -126,14 +126,78 @@
         }
       }
     }
-      
+
     &-trigger {
       color: var(--accent);
+      display: inline-flex;
       border: 2px solid;
       margin-left: 10px;
       height: 100%;
       padding: 3px 8px;
       position: relative;
+      cursor: pointer;
+
+      &.hidden {
+        display: none;
+      }
     }
+
+    &-icon {
+      align-items: center;
+      display: inline-flex;
+      justify-content: center;
+      height: 1.5rem;
+      width: 1rem;
+
+      svg {
+        width: 1em;
+        height: 1em;
+        display: inline-block;
+        font-size: inherit;
+      }
+    }
+  }
+}
+
+.theme-switch {
+  position: absolute;
+  display: inline-flex;
+  cursor: pointer;
+  height: 34px;
+  width: 36px;
+  transform: translate(-8px,-3px);
+}
+
+.search-container {
+  position: absolute;
+  --shadow-color: var(--accent-alpha-70);
+  --shadow: 0 10px var(--shadow-color), -10px 10px var(--shadow-color), 10px 10px var(--shadow-color);
+
+  background: var(--background);
+  box-shadow: var(--shadow);
+  color: var(--color);
+  border: 2px solid;
+  margin: 0;
+  padding: 10px;
+  z-index: 99;
+  top: 50px;
+  right: 0;
+  max-width: 250px;
+
+  input {
+    background-color: var(--background);
+    color: var(--base);
+    border: none;
+    border-bottom: solid 2px var(--accent);
+
+    &:focus-visible {
+      outline: none;
+    }
+  }
+
+  .search-comment {
+    margin-top: 10px;
+    font-size: .8rem;
+    color: var(--accent-alpha-70);
   }
 }
