--- a/templates/macros/header.html
+++ b/templates/macros/header.html
@@ -5,12 +5,38 @@
             {{ logo::logo() }}
         </div>
         <div class="menu-trigger">menu</div>
+
+        {% if config.extra.ddg_search %}
+        <btn class="menu-trigger" onclick="openSearchBar()">
+          <span class="menu-icon">
+          <svg aria-hidden="true" focusable="false" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+          </svg>
+          </span>
+        </btn>
+        {% endif %}
+
+        {% if config.extra.theme_switcher %}
+        <btn class="menu-trigger theme-switch-wrapper">
+          <label class="theme-switch" for="theme-mode-checkbox">
+          <input class="hidden" type="checkbox" id="theme-mode-checkbox" />
+          </label>
+          <span class="menu-icon">
+          <svg aria-hidden="true" focusable="false" data-icon="adjust" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path fill="currentColor" d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"></path>
+          </svg>
+          </span>
+        </btn>
+        {% endif %}
     </div>
     {# Check if there are menu items to render, yes if > 0 #}
     {%- set num = config.extra.main_menu | length -%}
     {% if num > 0 -%}
         {{ menu::menu() }}
     {% endif -%}
+
+    {% if config.extra.ddg_search %}
+    {{ search::popover() }}
+    {% endif %}
 </header>
 {% endmacro header %}
-
