theme switcher integration and better macros

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 {% import "macros/utils.html" as utils -%}
 {% import "macros/menu.html" as menu -%}
 {% import "macros/search.html" as search -%}
+{% import "macros/theme_switcher.html" as theme_switcher -%}
 {% import "macros/pagination.html" as pagination -%}
 {% import "macros/footer.html" as footer -%}
 {% import "macros/extended_footer.html" as extended_footer -%}
@@ -87,9 +88,13 @@
 
                         {%- block script -%}
                             {{ footer::script() }}
-                            
+
                             {% if config.extra.ddg_search %}
                             {{ search::script() }}
+                            {% endif %}
+
+                            {% if config.extra.theme_switcher %}
+                            {{ theme_switcher::script() }}
                             {% endif %}
                         {%- endblock script -%}
                     </div>
