--- a/templates/page.html
+++ b/templates/page.html
@@ -22,8 +22,15 @@
         </h1>
         {{ posts::meta(page=page, author=config.extra.show_author) }}
 
+        {% if page.extra.cover_image %}
+        <figure>
+        {{ posts::cover(page=page, image=page.extra.cover_image) }}
+        {% if page.extra.cover_caption %}
+        <figcaption class="center">{{ page.extra.cover_caption }}</figcaption>
+        {% endif %}
+        </figure>
+        {% endif %}
 
-        {#- Skipping logic for cover as was in original Terminal theme -#}
 
         <div class="post-content">
             {{ page.content | safe }}
