--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 {% import "macros/extended_footer.html" as extended_footer -%}
 
 <!DOCTYPE html>
-<html lang="{{ config.default_language }}">
+<html lang="{{ config.default_language }}" dir="ltr">
     <head>
         {%- block title -%}
             <title>{{ config.title }}</title>
