--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -168,20 +168,22 @@
   transform: translate(-8px,-3px);
 }
 
-.search-container {
+.search-popover {
   position: absolute;
   --shadow-color: var(--accent-alpha-70);
   --shadow: 0 10px var(--shadow-color), -10px 10px var(--shadow-color), 10px 10px var(--shadow-color);
-
-  background: var(--background);
   box-shadow: var(--shadow);
   color: var(--color);
-  border: 2px solid;
   margin: 0;
-  padding: 10px;
   z-index: 99;
   top: 50px;
   right: 0;
+}
+
+.search-container {
+  background: var(--background);
+  border: 2px solid;
+  padding: 10px;
   max-width: 250px;
 
   input {
