--- a/templates/macros/social.html
+++ b/templates/macros/social.html
@@ -1,12 +1,40 @@
 {% macro og_preview() %}
-    <meta property="og:title" content="{{ social::og_title() }}" />
+    <meta property="og:title" content="{{ social::og_title() | trim }}" />
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="{{ current_url }}"/>
-    <meta property="og:description" content="{{ social::og_description() }}"/>
-    {%- if config.extra.og_preview_img -%}
-        <meta property="og:image" content="{{ get_url(path=config.extra.og_preview_img) }}"/>
-    {%- endif -%}
+    <meta property="og:description" content="{{ social::og_description(page=page) }}"/>
+    <meta property="og:image" content="{{ social::og_image() |trim }}"/>
 {% endmacro og_preview %}
+
+{% macro twitter_preview() %}
+    {%- if page -%}
+    {%- if page.extra.cover_image %}
+    <meta name="twitter:card" content="summary_large_image">
+    {%- else %}
+    <meta name="twitter:card" content="summary">
+    {%- endif -%}
+    {%- else %}
+    <meta name="twitter:card" content="summary">
+    {%- endif -%}
+
+    {%- if config.extra.twitter_user -%}
+    <meta name="twitter:site" content="{{ config.extra.twitter_user }}">
+    <meta name="twitter:creator" content="{{ config.extra.twitter_user }}">
+    <meta name="twitter:image:alt" content="{{ social::og_image() | trim }}">
+    {% endif %}
+{% endmacro twitter_preview %}
+
+{% macro og_image() %}
+  {%- if section -%}
+    {%- if config.extra.og_preview_img -%}
+      {{ get_url(path=config.extra.og_preview_img) }}
+    {%- endif -%}
+  {%- elif page -%}
+    {%- if page.extra.cover_image -%}
+      {{ get_url(path=page.extra.cover_image) }}
+    {%- endif -%}
+  {%- endif -%}
+{% endmacro og_image %}
 
 {% macro og_description() %}
     {%- if section -%}
