--- a/templates/macros/social.html
+++ b/templates/macros/social.html
@@ -2,26 +2,34 @@
     <meta property="og:title" content="{{ social::og_title() | trim }}" />
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="{{ current_url }}"/>
-    <meta property="og:description" content="{{ social::og_description(page=page) }}"/>
+    <meta property="og:description" content="{{ head::description() }}"/>
     <meta property="og:image" content="{{ social::og_image() |trim }}"/>
 {% endmacro og_preview %}
 
 {% macro twitter_preview() %}
     {%- if page -%}
-    {%- if page.extra.cover_image %}
+    {% if page.extra.cover_image %}
     <meta name="twitter:card" content="summary_large_image">
-    {%- else %}
+    {% else %}
     <meta name="twitter:card" content="summary">
     {%- endif -%}
-    {%- else %}
+    {% else %}
     <meta name="twitter:card" content="summary">
     {%- endif -%}
 
-    {%- if config.extra.twitter_user -%}
+    {% if config.extra.twitter_site -%}
     <meta name="twitter:site" content="{{ config.extra.twitter_user }}">
+    {%- endif -%}
+
+    {% if page %}
+    {%- if page.extra.twitter_user -%}
+    <meta name="twitter:creator" content="{{ page.extra.twitter_user }}">
+    {%- endif -%}
+    {%- endif %}
+    {%- if config.extra.twitter_user %}
     <meta name="twitter:creator" content="{{ config.extra.twitter_user }}">
+    {%- endif %}
     <meta name="twitter:image:alt" content="{{ social::og_image() | trim }}">
-    {% endif %}
 {% endmacro twitter_preview %}
 
 {% macro og_image() %}
@@ -35,24 +43,6 @@
     {%- endif -%}
   {%- endif -%}
 {% endmacro og_image %}
-
-{% macro og_description() %}
-    {%- if section -%}
-        {%-  if section.description -%}
-            {{ section.description }}
-        {%- else -%}
-            {{ config.description }}
-        {%- endif -%}
-    {%- elif page -%}
-        {%- if page.summary | string -%}
-            {{ page.summary | striptags | truncate(length=200) }}
-        {%- elif page.description -%}
-            {{ page.description }}
-        {%- else -%}
-            {{ config.description }}
-        {%- endif -%}
-    {%- endif -%}
-{% endmacro og_description %}
 
 {% macro og_title() %}
     {{ config.title }} -&nbsp;
