data-theme dark on start

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 {% import "macros/extended_footer.html" as extended_footer -%}
 
 <!DOCTYPE html>
-<html lang="{{ config.default_language }}" dir="ltr">
+<html lang="{{ config.default_language }}" data-theme="dark" dir="ltr">
     <head>
         {%- block title -%}
             <title>{{ config.title }}</title>
