--- a/templates/404.html
+++ b/templates/404.html
@@ -31,13 +31,10 @@
 
     {% if config.extra.ddg_search %}
     <p>
-      Otherwise, you can search all over the website with DuckDuckGo.
+      Otherwise, you can search all over the website from the search bar up here.
     </p>
 
-    <div class="search-container">
-    {{ search::form() }}
-    <div><div class="search-comment">Powered by DuckDuckGo</div></div>
-    </div>
+    <!-- div class="search-container">{# TODO #}</div --> 
 
     {% endif %}
     </div>
