--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -184,12 +184,14 @@
   background: var(--background);
   border: 2px solid;
   padding: 10px;
-  max-width: 250px;
+  width: 100%;
 
   input {
     background-color: var(--background);
     color: var(--base);
     border: none;
+    padding: 10px;
+    margin-bottom: 10px;
     border-bottom: solid 2px var(--accent);
 
     &:focus-visible {
@@ -201,5 +203,34 @@
     margin-top: 10px;
     font-size: .8rem;
     color: var(--accent-alpha-70);
+  }
+}
+
+// Exp
+.search {
+  background-color: var(--background);
+  position: relative;
+  overflow: hidden;
+  transition: all .5s ease;
+
+  &.open {
+    width: 100%;
+    max-width: 300px;
+
+    .search-box {
+      display: inherit;
+      width: 100%;
+    }
+  }
+}
+
+.search-box {
+  display: none;
+  box-shadow: none;
+  border: none;
+  background: transparent;
+  color: #fff;
+  &:focus {
+    outline: none;
   }
 }
