--- a/templates/macros/search.html
+++ b/templates/macros/search.html
@@ -1,14 +1,17 @@
 {% macro button() %}
-<btn class="menu-trigger" onclick="openSearchBar()">
-  <span class="menu-icon">
+<div class="menu-trigger search">
+  <input id="search" type="search" class="input-large search-query search-box">
+  <span class="menu-icon search-button">
   <svg aria-hidden="true" focusable="false" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
     <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
   </svg>
   </span>
-</btn>
+</div>
 {% endmacro button %}
 
-{% macro form() %}
+{# Search for DDG documentation if you need other params #}
+{# https://duckduckgo.com/params #}
+{% macro ddg_form() %}
 <form class="ddg" name="x" action="//duckduckgo.com/">
   <!-- Target website -->
   {% if config.extra.ddg_website %}
@@ -54,33 +57,74 @@
   <button class="button" type="submit">Go</button>
   {% endif %}
 </form>
+
+<div><div class="search-comment">Powered by DuckDuckGo</div></div>
+{% endmacro ddg_form %}
+
+{% macro form() %}
+<form class="form-search">
+  <input id="search" type="text" class="input-large search-query">
+</form>
 {% endmacro form %}
+
+{% macro results() %}
+<div class="search-results">
+  <div class="search-results__items"></div>
+</div>
+<p></p>
+{% endmacro results %}
 
 {% macro popover() %}
 <div class="header__search">
-  {# Search for DDG documentation if you need other params #}
-  {# https://duckduckgo.com/params #}
   <div class="search-container search-popover hidden">
-    {{ search::form() }}
-
-    <div><div class="search-comment">Powered by DuckDuckGo</div></div>
+    {% if config.build_search_index %}
+    {{ search::results() }}
+    {% elif config.extra.ddg_search %}
+    {{ search::ddg_form() }}
+    {% endif %}
   </div>
 </div>
 {% endmacro popover %}
 
 {% macro script() %}
 <script type="text/javascript">
-// Search bar
-// TODO: extend to close when background is pressed
-var modal = document.getElementsByClassName('search-container')[0];
+!function () {
+  function t() {
+    search_button && search_button.classList.toggle('hidden'),
+    search_popover && search_popover.classList.toggle('hidden'),
+    c && c.classList.toggle('hidden'),
+    search_bar && search_bar.classList.toggle('open'),
+    search_box.focus();
+  }
+  var n = document.querySelector('.container'),
+  search_popover = document.querySelector('.search-popover'),
+  search_bar = document.querySelector('.search'),
+  search_box = document.querySelector('.search-box'),
+  search_button = document.querySelector('.search-button'),
+  c = document.querySelector('.menu__sub-inner-more');
 
-function openSearchBar(){
-if (modal.classList.contains("hidden")) {
-    modal.classList.remove("hidden");
-}
-else {
-    modal.classList.add("hidden");
-}
-}
+  search_popover && search_popover.addEventListener('click', function (e) {
+    return e.stopPropagation()
+  }),
+  document.body.addEventListener('click', function () {
+    !c || c.classList.contains('hidden') ? !search_popover.classList.contains('hidden') && search_popover.classList.add('hidden') : c.classList.add('hidden'), search_bar.classList.remove('open')
+  }),
+  search_bar && search_bar.addEventListener('click', function (e) {
+    return e.stopPropagation()
+  }),
+  search_button && search_button.addEventListener('click', function (e) {
+    e.stopPropagation(),
+    t()
+  })
+}();
+
 </script>
+
+{% if config.build_search_index %}
+{# TODO: multilang support -#}
+{%- set search_index_file = "search_index." ~ config.default_language ~ ".js" %}
+<script src="{{ get_url(path='assets/js/search.js', trailing_slash=false) | safe }}"></script>
+<script defer src="{{ get_url(path='elasticlunr.min.js', trailing_slash=false) | safe }}"></script>
+<script defer src="{{ get_url(path=search_index_file, trailing_slash=false) | safe }}"></script>
+{% endif %}
 {% endmacro script %}
