--- a/templates/macros/search.html
+++ b/templates/macros/search.html
@@ -121,10 +121,16 @@
 </script>
 
 {% if config.build_search_index %}
-{# TODO: multilang support -#}
-{%- set search_index_file = "search_index." ~ config.default_language ~ ".js" %}
 <script src="{{ get_url(path='assets/js/search.js', trailing_slash=false) | safe }}"></script>
 <script defer src="{{ get_url(path='elasticlunr.min.js', trailing_slash=false) | safe }}"></script>
+{%- if config.default_language or config.default_language != "en" -%}
+{%- set search_index_file = "search_index." ~ config.default_language ~ ".js" %}
+{%- set lunr_lang_file = "assets/js/lunr-languages/lunr." ~ config.default_language ~ ".min.js" -%}
+<script defer src="{{ get_url(path='assets/js/lunr-languages/lunr.stemmer.support.min.js', trailing_slash=false) | safe }}"></script>
+<script defer src="{{ get_url(path=lunr_lang_file, trailing_slash=false) | safe }}"></script>
 <script defer src="{{ get_url(path=search_index_file, trailing_slash=false) | safe }}"></script>
+{%- else -%}
+<script defer src="{{ get_url(path='search_index.en.js', trailing_slash=false) | safe }}"></script>
+{%- endif -%}
 {% endif %}
 {% endmacro script %}
