--- a/templates/macros/theme_switcher.html
+++ b/templates/macros/theme_switcher.html
@@ -14,8 +14,8 @@
 {% macro script() %}
 <script type="text/javascript">
 // Theme switcher
-const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
-const currentTheme = localStorage.getItem('theme');
+var toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
+var currentTheme = localStorage.getItem('theme');
 
 if (currentTheme) {
     document.documentElement.setAttribute('data-theme', currentTheme);
