Both elasticlunr search and DDG search are now consistent, functional, homogeneous and documented in the README file

--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -75,3 +75,16 @@
     font-weight: bold;
   }
 }
+
+.form-search {
+  width: 100%;
+  display: flex;
+}
+
+.ddg-icon {
+  margin-left: 10px;
+}
+
+.header .hidden {
+  display: none;
+}
