better documented README and native support for light colorscheme with orange palette

--- a/sass/color/orange.scss
+++ b/sass/color/orange.scss
@@ -6,3 +6,12 @@
   --color: whitesmoke;
   --border-color: rgba(255, 255, 255, .1);
 }
+
+[data-theme="light"] {
+  --accent: rgb(196, 125, 76);
+  --accent-alpha-20: rgba(196, 125, 76, .2);
+  --accent-alpha-70: rgba(196, 125, 76, .7);
+  --background: #e4e3dd;
+  --color: #110b11;
+  --border-color: rgba(255, 255, 255, .1);
+}
