--- a/sass/color/blue.scss
+++ b/sass/color/blue.scss
@@ -1,5 +1,6 @@
 :root {
   --accent: rgb(35,176,255);
+  --accent-alpha-10: rgba(35,176,255,.1);
   --accent-alpha-20: rgba(35,176,255,.2);
   --accent-alpha-70: rgba(35,176,255,.7);
   --background: #1D1E28;
