--- a/sass/color/green.scss
+++ b/sass/color/green.scss
@@ -3,6 +3,7 @@
   // --accent-alpha-20: rgba(120,226,160,.2);
   // --accent-alpha-70: rgba(120,226,160,.7);
   --accent: rgb(72, 251, 53);
+  --accent-alpha-10: rgba(72, 251, 53,.1);
   --accent-alpha-20: rgba(72, 251, 53,.2);
   --accent-alpha-70: rgba(72, 251, 53,.7);
   --background: #1F222A;
