--- a/sass/color/pink.scss
+++ b/sass/color/pink.scss
@@ -1,5 +1,6 @@
 :root {
   --accent: rgb(238,114,241);
+  --accent-alpha-10: rgba(238,114,241,.1);
   --accent-alpha-20: rgba(238,114,241,.2);
   --accent-alpha-70: rgba(238,114,241,.7);
   --background: #21202C;
