--- a/sass/color/red.scss
+++ b/sass/color/red.scss
@@ -1,5 +1,6 @@
 :root {
   --accent: rgb(255,98,102);
+  --accent-alpha-10: rgba(255,98,102,.1);
   --accent-alpha-20: rgba(255,98,102,.2);
   --accent-alpha-70: rgba(255,98,102,.7);
   --background: #221F29;
