facebook shortcode style support

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -191,8 +191,36 @@
       a {
         color: var(--accent);
       }
-    }
-  }  // blockquote for twitter shortcode
+    } // blockquote for twitter shortcode
+
+    &.facebook-post {
+      position: relative;
+      background-color: var(--accent-alpha-10);
+      font: inherit;
+      color: inherit;
+      border: 1px solid var(--accent);
+      padding-top: 60px;
+
+      p:before {
+        content: '';
+      }
+
+      &:before {
+        font: inherit;
+        content: '> From Facebook:';
+        position: absolute;
+        top: 20px;
+        left: inherit;
+        color: var(--accent);
+        font-weight: bold;
+      }
+
+      a {
+        color: var(--accent);
+      }
+    }  // blockquote for facebook shortcodes
+
+  } // blockquote for shortcodes
 }
 
 // TODO: try adapting this using a properly nested selector in the block above
